fix issue overflow on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply overflow-hidden;
-}
-
 ::-webkit-scrollbar {
   width: 5px;
 }
